objects/Account.object
<CustomObject>
    <fields>
        <fullName>AE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TIP AE</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR ((2 OR 3) AND 4)</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTPS_TOP_30__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used by the Apttus CLLA flows.</description>
        <label>Top 30</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>A-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Type_Mismatch__c</fullName>
        <formula>IF
(
((RecordType.Name=&apos;Account&apos;|| RecordType.Name=&apos;Partner-Account&apos;) &amp;&amp; ParentId &lt;&gt; null), 
IF((TEXT(Type) &lt;&gt; null &amp;&amp; TEXT(Parent.Type) &lt;&gt; null &amp;&amp; TEXT(Type)=TEXT(Parent.Type)),&apos;true&apos;,&apos;false&apos;),
&apos;false&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type Mismatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_with_multiple_EOTIndex_Parent__c</fullName>
        <description>Is Parent account has multiple edaOT Indexes</description>
        <formula>Parent.Accounts_with_multiple_eDAoT_Indexes__c</formula>
        <inlineHelpText>Is Parent account has multiple edaOT Indexes</inlineHelpText>
        <label>Multiple eDAoT Indexes under the Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounts_with_multiple_eDAoT_Indexes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accounts with multiple eDAoT Indexes under a Parent Account.
This will be checked if there’s an entry for the Exception table for that parent account. Otherwise, it will be unchecked.</description>
        <inlineHelpText>This will be checked if there’s an entry for the Exception table for that parent account. Otherwise, it will be unchecked.</inlineHelpText>
        <label>Accounts with multiple eDAoT Indexes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Division</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <inlineHelpText>Suite</inlineHelpText>
        <label>Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_4__c</fullName>
        <label>Address 4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Last_Updated_DT__c</fullName>
        <description>S_ADDR_ORG_X.ATTRIB_12</description>
        <label>Address Last Updated DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_Status__c</fullName>
        <label>SAP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting OM Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting SAP Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OM Validated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>ADDR</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apex_Context2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apex Context2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apex_Context__c</fullName>
        <defaultValue>&apos;FALSE&apos;</defaultValue>
        <description>To Bypass validations</description>
        <label>Apex_Context</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Address_2__c</fullName>
        <description>Apttus use</description>
        <label>Division</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Address_3__c</fullName>
        <description>Apttus use</description>
        <label>Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Address_4__c</fullName>
        <description>Apttus use</description>
        <label>Address 4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Address__c</fullName>
        <description>Apttus use</description>
        <label>Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_City__c</fullName>
        <description>Apttus use</description>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Apttus use</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts (Country)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_County__c</fullName>
        <description>Apttus use</description>
        <label>County/Sub Locality</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Postal_Code__c</fullName>
        <description>Apttus use</description>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_State_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Region</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Apttus_Country__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Accounts (state/region)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Business_Hour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Support Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSelfService3_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store branding theme set by admin for Self Service 3.0</description>
        <label>Self Service 3.0 Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountsThemeSS3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSelfService_Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to store branding theme set by admin for Self Service 2.0</description>
        <label>SelfService Theme</label>
        <referenceTo>BMCServiceDesk__SelfService_Theme__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUrgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKUrgency</label>
        <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Remedyforce_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remedyforce Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ServiceProvider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ServiceProvider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__costCenter__c</fullName>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill/Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <formula>IF(ISBLANK(BillingStreet),&apos;&apos;, BillingStreet) 
&amp; 
IF(ISBLANK(BillingCity),&apos;&apos;, &apos;,&apos; &amp; BillingCity) 
&amp; 
IF(ISBLANK(BillingState),&apos;&apos;, &apos;,&apos; &amp; BillingState) 
&amp; 
IF(ISBLANK(BillingPostalCode),&apos;&apos;, &apos;,&apos; &amp; BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ByPass_Lookup_Filters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPass Lookup Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <description>S_ORG_EXT.X_CHANNEL_TYPE</description>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_and_State__c</fullName>
        <formula>City__c  &amp; &quot; &quot;  &amp;  State_Region__r.Name</formula>
        <label>City and State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>This could probably be accomplished through chatter</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Code</label>
        <referenceTo>Company_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County/Sub Locality</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <description>S_ORG_EXT.BASE_CURCY_CD</description>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>VEB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cust_Name_CLLA__c</fullName>
        <formula>IF(Customer_Name__c=null, Name, Customer_Name__c)</formula>
        <label>Cust_Name_CLLA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <description>to store the full Customer Name</description>
        <inlineHelpText>Full Name of the Customer</inlineHelpText>
        <label>Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project__c</fullName>
        <description>Custom text field Customer Project</description>
        <label>Customer Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBE_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ORG_EXT.X_DBE_FLG</description>
        <inlineHelpText>DBE Accounts require users to supply an email address that meet the specified domain criteria.</inlineHelpText>
        <label>DBE Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBE_false_message__c</fullName>
        <label>DBE false message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_Status__c</fullName>
        <label>DQ Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Remark__c</fullName>
        <label>Data Sync Remark</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Status__c</fullName>
        <label>Data Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Time__c</fullName>
        <label>Data Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Credit__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date of Credit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivering_Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivering Plant</label>
        <referenceTo>Delivering_Plant__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disable_Mailings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ORG_EXT.DISA_ALL_MAILS_FLG</description>
        <label>Disable Mailings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Channel</label>
        <referenceTo>Distribution_Channel__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Code</label>
        <referenceTo>Division_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain_Entitlement__c</fullName>
        <description>S_ORG_EXT.X_DBE_FLG</description>
        <inlineHelpText>Probably a picklist or entitlements</inlineHelpText>
        <label>Domain Entitlement</label>
        <length>28</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ADDR_ORG_X.ATTRIB_08</description>
        <label>Duplicate Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_EOT_Index__c</fullName>
        <formula>IF( Account_with_multiple_EOTIndex_Parent__c ,  IF( Sold_To__c, HYPERLINK(&quot;/apex/EOTIndexExceptions?Id=&quot; &amp; Id &amp; &quot;&amp;parentAccId=&quot; &amp; ParentId, &quot;Click here&quot; ,&quot;_self&quot;), &quot;&quot;) 
, &quot;&quot;)</formula>
        <label>Edit EOT Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Product_Features__c</fullName>
        <formula>HYPERLINK(&quot;/apex/EntitlementProductFeatures_VP?accountId=&quot;&amp; Id , &quot;Click to see Product Features&quot; , &quot;_blank&quot;)</formula>
        <label>Entitlement Product Features</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eodstatus_changeintf__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EOD Status Change Flag</description>
        <label>EOD Status Change Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Export_Screening_Reason__c</fullName>
        <label>EOD Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Screening_Status__c</fullName>
        <inlineHelpText>No Match - Export Clearance OK
Potential Match - Potential match to be investigated  
Match - Export clearance Failed
Unverified - Not Screened</inlineHelpText>
        <label>Export Screening Status</label>
        <picklist>
            <picklistValues>
                <fullName>Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential Match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unverified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Update_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ORG_EXT.X_UPDATE_FLG</description>
        <label>External Update Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TIP FAE</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR ((2 OR 3) AND 4)</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsFAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Finance_Name__c</fullName>
        <label>Finance Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <description>Formula based address field used for Apttus templates</description>
        <formula>Address__c &amp; IF(Address__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; Address_2__c &amp; IF(Address_2__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; Address_3__c &amp; IF(Address_3__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; Address_4__c &amp; IF(Address_4__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; City__c &amp; IF(City__c &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; State_Region__r.Name &amp; IF(State_Region__r.Name &lt;&gt; &quot;&quot;,&quot;, &quot;,&quot;&quot;) &amp; Postal_Code__c &amp; &quot; &quot; &amp; Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Comment__c</fullName>
        <label>GSS Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Eff_Date__c</fullName>
        <label>GSS Eff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GSS_Index__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSS Index</label>
        <referenceTo>GSS_Index__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSS_Status_Press_Release__c</fullName>
        <label>GSS Status Press Release</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSS_Status__c</fullName>
        <label>GSS Status</label>
        <picklist>
            <picklistValues>
                <fullName>full MNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>partial MNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Related_Parties__c</fullName>
        <description>This checkbox would be checked if the Related Parties List field is not blank</description>
        <formula>AND (
     NOT( ISBLANK ( Related_Parties_List__c ) )
     , NOT( ISNULL ( Related_Parties_List__c ) )
 )</formula>
        <label>Has Related Parties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Page__c</fullName>
        <label>Home Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Country__c</fullName>
        <formula>Country__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISR_Maint_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ISR Maint Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Org_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ORG_EXT.INT_ORG_FLG</description>
        <label>Internal Org Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Address_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid Address Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kanji_Address_2__c</fullName>
        <description>X_ADDR2_KANJI</description>
        <label>Kanji Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Address_3__c</fullName>
        <label>Kanji Address 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Address_4__c</fullName>
        <label>Kanji Address 4</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Address__c</fullName>
        <description>X_ADDR_KANJI</description>
        <label>Kanji Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_City__c</fullName>
        <label>Kanji City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kanji_Name__c</fullName>
        <label>Kanji Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language Code</label>
        <referenceTo>Language_Code__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Downstream_OBM__c</fullName>
        <label>Last Downstream OBM</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Validated_By__c</fullName>
        <label>Last Validated By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Validated_Date__c</fullName>
        <label>Last Validated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_Base_Agreement_Status__c</fullName>
        <label>Base Legal Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>SLMA:BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLMA:NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLMA:APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTLA:BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTLA:NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTLA:APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTLA:BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTLA:NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTLA:APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLMA:BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLMA:NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLMA:APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA:BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA:NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA:APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSA:BASE AGREEMENT OK TO USE AS-IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSA:NEW BASE AGREEMENT REQUIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSA:APPROVAL-AMENDMENT TO BASE AGR REQ</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>